--- a/Software/Werwolf/SpielDesigner/SpielDesigner.csproj
+++ b/Software/Werwolf/SpielDesigner/SpielDesigner.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{25354B17-28A2-4B9E-9409-F045E9EA9721}</ProjectGuid>
+    <ProjectGuid>{A7D4626A-9404-40D8-BCF0-E06216022766}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Designer</RootNamespace>
-    <AssemblyName>Designer</AssemblyName>
+    <RootNamespace>SpielDesigner</RootNamespace>
+    <AssemblyName>SpielDesigner</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -40,6 +40,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Blutrünstiger Werwolf.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -76,14 +79,17 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Assistment\Assistment\Assistment.csproj">
-      <Project>{0C5CE078-5B2A-4160-B9DF-DBD11094422B}</Project>
-      <Name>Assistment</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Werwolf\Werwolf.csproj">
       <Project>{CDDC6E7B-BC1E-4439-81AD-AB4891063771}</Project>
       <Name>Werwolf</Name>
     </ProjectReference>
+    <ProjectReference Include="..\WolfSlave\WolfSlave.csproj">
+      <Project>{F447732D-BEA1-46FC-93BB-F77724E905DB}</Project>
+      <Name>WolfSlave</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Blutrünstiger Werwolf.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
