--- a/Software/Werwolf/Werwolf/Werwolf.csproj
+++ b/Software/Werwolf/Werwolf/Werwolf.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Inhalt\Settings.cs" />
     <Compile Include="Inhalt\Universe.cs" />
     <Compile Include="Inhalt\XmlElement.cs" />
+    <Compile Include="Karten\WolfHeader.cs" />
     <Compile Include="Karten\DrawContextExtensions.cs" />
     <Compile Include="Karten\FixedFontKarte.cs" />
     <Compile Include="Karten\TitelProxy.cs" />
@@ -213,6 +214,12 @@
     <Content Include="Ressourcen\Bilder\FehlerBilder\Kopie von Nicht Gefunden.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Ressourcen\Bilder\TextBilder\DaumenQuer.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Ressourcen\Felder.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Ressourcen\Bilder\HintergrundBilder\Artefakt.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -246,6 +253,12 @@
     <Content Include="Ressourcen\Bilder\HintergrundBilder\Zauber.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Ressourcen\Initiative.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Ressourcen\Reichweite.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Ressourcen\Bilder\RuckseitenBilder\CoverArtefakte.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -255,10 +268,10 @@
     <Content Include="Ressourcen\Bilder\RuckseitenBilder\CoverRollen.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Ressourcen\Bilder\TextBilder\DaumenOben.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="Ressourcen\Storung.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Ressourcen\Bilder\TextBilder\DaumenQuer.png">
+    <Content Include="Ressourcen\Bilder\TextBilder\DaumenOben.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Ressourcen\Bilder\TextBilder\DaumenUnten.png">
