--- a/Software/Werwolf/Werwolf/Werwolf.csproj
+++ b/Software/Werwolf/Werwolf/Werwolf.csproj
@@ -150,10 +150,14 @@
     <Compile Include="Inhalt\Settings.cs" />
     <Compile Include="Inhalt\Universe.cs" />
     <Compile Include="Inhalt\XmlElement.cs" />
+    <Compile Include="Karten\WolfHauptBild.cs" />
+    <Compile Include="Karten\WonderInfos.cs" />
+    <Compile Include="Karten\WonderTextFeld.cs" />
     <Compile Include="Karten\WolfHeader.cs" />
     <Compile Include="Karten\DrawContextExtensions.cs" />
     <Compile Include="Karten\FixedFontKarte.cs" />
     <Compile Include="Karten\TitelProxy.cs" />
+    <Compile Include="Karten\WonderBalken.cs" />
     <Compile Include="Printing\WolfSinglePaper.cs" />
     <Compile Include="Karten\StandardDeck.cs" />
     <Compile Include="Karten\StandardRuckseite.cs" />
@@ -214,8 +218,20 @@
     <Content Include="Ressourcen\Bilder\FehlerBilder\Kopie von Nicht Gefunden.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Ressourcen\Bilder\HintergrundBilder\Modern Wonders - Oberflaeche Schwarz.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Ressourcen\Bilder\HintergrundBilder\Modern Wonders - Oberflaeche Textur.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Ressourcen\Bilder\TextBilder\DaumenQuer.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Ressourcen\Bilder\TextBilder\GroßesNamenfeld.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Ressourcen\Bilder\TextBilder\KleinesNamenfeld.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Ressourcen\Felder.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
