--- a/Software/Werwolf/Werwolf/Werwolf.csproj
+++ b/Software/Werwolf/Werwolf/Werwolf.csproj
@@ -151,13 +151,15 @@
     <Compile Include="Inhalt\Universe.cs" />
     <Compile Include="Inhalt\XmlElement.cs" />
     <Compile Include="Karten\WolfHauptBild.cs" />
-    <Compile Include="Karten\WonderInfos.cs" />
-    <Compile Include="Karten\WonderTextFeld.cs" />
+    <Compile Include="Karten\Wonders\WonderInfos.cs" />
+    <Compile Include="Karten\Wonders\WonderKostenFeld.cs" />
+    <Compile Include="Karten\Wonders\WonderNamenFeld.cs" />
+    <Compile Include="Karten\Wonders\WonderTextFeld.cs" />
     <Compile Include="Karten\WolfHeader.cs" />
     <Compile Include="Karten\DrawContextExtensions.cs" />
     <Compile Include="Karten\FixedFontKarte.cs" />
     <Compile Include="Karten\TitelProxy.cs" />
-    <Compile Include="Karten\WonderBalken.cs" />
+    <Compile Include="Karten\Wonders\WonderBalken.cs" />
     <Compile Include="Printing\WolfSinglePaper.cs" />
     <Compile Include="Karten\StandardDeck.cs" />
     <Compile Include="Karten\StandardRuckseite.cs" />
