--- a/Software/Werwolf/Werwolf/Werwolf.csproj
+++ b/Software/Werwolf/Werwolf/Werwolf.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Inhalt\XmlElement.cs" />
     <Compile Include="Karten\WolfHauptBild.cs" />
     <Compile Include="Karten\Wonders\WonderDoppelName.cs" />
+    <Compile Include="Karten\Wonders\WonderProduktionsFeld.cs" />
     <Compile Include="Karten\Wonders\WondersDoppelBild.cs" />
     <Compile Include="Karten\Wonders\WonderGlobalesReich.cs" />
     <Compile Include="Karten\Wonders\WonderAusbauKostenFeld.cs" />
