--- a/Software/Werwolf/WolfSlave/WolfSlave.csproj
+++ b/Software/Werwolf/WolfSlave/WolfSlave.csproj
@@ -47,7 +47,7 @@
   <ItemGroup>
     <Reference Include="itextsharp, Version=5.5.1.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Werwolf\bin\Debug\itextsharp.dll</HintPath>
+      <HintPath>..\..\..\..\Assistment\Assistment\Subprozesse\itextsharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
