--- a/Software/Werwolf/Werwolf/Werwolf.csproj
+++ b/Software/Werwolf/Werwolf/Werwolf.csproj
@@ -161,6 +161,12 @@
     <Compile Include="Inhalt\Settings.cs" />
     <Compile Include="Inhalt\Universe.cs" />
     <Compile Include="Inhalt\XmlElement.cs" />
+    <Compile Include="Karten\CyberAktion\CyberAktionHeader.cs" />
+    <Compile Include="Karten\CyberAktion\CyberWaffenHeader.cs" />
+    <Compile Include="Karten\CyberAktion\DoppelTabTextBox.cs" />
+    <Compile Include="Karten\CyberAktion\HochBildTiefBox.cs" />
+    <Compile Include="Karten\CyberAktion\LeftRightLine.cs" />
+    <Compile Include="Karten\CyberAktion\SimpleAufgabenBox.cs" />
     <Compile Include="Karten\WolfHauptBild.cs" />
     <Compile Include="Karten\Wonders\WonderDoppelName.cs" />
     <Compile Include="Karten\Wonders\WonderProduktionsFeld.cs" />
@@ -233,9 +239,7 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Karten\CyberAktion\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Ressourcen\Bilder\FehlerBilder\Fehlerbild.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
