--- a/Software/Werwolf/Translation/Translation.csproj
+++ b/Software/Werwolf/Translation/Translation.csproj
@@ -86,6 +86,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PDFWorkarounds\ProduktionSteik.cs" />
     <Compile Include="TranslatingTool.cs">
       <SubType>Form</SubType>
     </Compile>
