--- a/Software/Werwolf/Designer/Designer.csproj
+++ b/Software/Werwolf/Designer/Designer.csproj
@@ -59,8 +59,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FragmentTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FragmentTest.Designer.cs">
+      <DependentUpon>FragmentTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HintergrundTool.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FragmentTest.resx">
+      <DependentUpon>FragmentTest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HintergrundTool.resx">
+      <DependentUpon>HintergrundTool.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
