--- a/Software/Werwolf/Designer/Designer.csproj
+++ b/Software/Werwolf/Designer/Designer.csproj
@@ -59,6 +59,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Hintergrund\HintergrundErstellerFormFarbListe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Hintergrund\HintergrundErstellerFormFarbListe.Designer.cs">
+      <DependentUpon>HintergrundErstellerFormFarbListe.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PotentialTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PotentialTest.Designer.cs">
+      <DependentUpon>PotentialTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="FragmentTest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +89,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RahmenCreator\State.cs" />
+    <EmbeddedResource Include="Hintergrund\HintergrundErstellerFormFarbListe.resx">
+      <DependentUpon>HintergrundErstellerFormFarbListe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PotentialTest.resx">
+      <DependentUpon>PotentialTest.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FragmentTest.resx">
       <DependentUpon>FragmentTest.cs</DependentUpon>
     </EmbeddedResource>
